# MDSCHEDULER

./: README.md  final_pdr_md_platform.md  preprocess_pipeline.sh
md-platform/: .dockerignore  .env.example  .gitignore  CONTRACT.md  DEPLOY.md  Dockerfile.allinone  Makefile  README.md  docker-compose.easy.yml  docker-compose.yml
md-platform/backend/: Dockerfile  (+1 more)
md-platform/worker/: Dockerfile  README.md  pyproject.toml  worker.py
md-platform/worker/mdworker/: __init__.py  config.py  tasks.py
md-platform/worker/mdworker/analysis/: __init__.py  metrics.py  plots.py  theme.py
md-platform/worker/mdworker/chem/: __init__.py  mapping.py
md-platform/worker/mdworker/design/: __init__.py  autoscientist.py  complex_md.py  docking.py  ga.py  md_eval.py  peptide.py  reporter.py  runner.py
md-platform/worker/mdworker/io/: __init__.py  complex.py  pdbqt.py  receptor.py
md-platform/worker/mdworker/pipeline/: __init__.py  context.py  runner.py  structures.py
md-platform/worker/mdworker/pipeline/engine/: __init__.py  base.py  gromacs.py  mock.py
md-platform/worker/mdworker/pipeline/steps/: __init__.py  analyze_md.py  assign_bond_orders.py  generate_report.py  mmpbsa.py  package_results.py  parameterize_ligand.py  prepare_structure.py  render_movie.py  run_md.py  split_pdbqt_poses.py  validate_input.py
md-platform/worker/mdworker/report/: __init__.py  builder.py  gemini.py
md-platform/worker/tests/: test_autoscientist.py  test_complex_split.py  test_design_ga.py  test_docking_engine.py  test_forcefield.py  test_hotspots.py  test_md_eval.py  test_replicas.py
(+91 files in other folders)
